--- a/notebooks/Meetup 1/Meetup 1.ipynb
+++ b/notebooks/Meetup 1/Meetup 1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -26,8 +26,171 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Get the "
+    "Get the MNIST Dataset\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
+      "                                 Dload  Upload   Total   Spent    Left  Speed\n",
+      "100 15.4M  100 15.4M    0     0  37.4M      0 --:--:-- --:--:-- --:--:-- 37.4M\n"
+     ]
+    }
+   ],
+   "source": [
+    "!mkdir -p /work/tmp/\n",
+    "!curl -o /work/tmp/mnist.pk.gz http://deeplearning.net/data/mnist/mnist.pkl.gz"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-rw-r--r-- 1 root root 16M Apr 16 01:54 /work/tmp/mnist.pk.gz\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!ls -lh /work/tmp/mnist.pk.gz\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "#### Load the dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import cPickle, gzip, numpy\n",
+    "\n",
+    "#load the dataset\n",
+    "f = gzip.open('/work/tmp/mnist.pk.gz', 'rb')\n",
+    "train_set, valid_set, test_set = cPickle.load(f)\n",
+    "f.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('Training seet n', 50000)\n",
+      "('Validation set n', 10000)\n",
+      "('Testing set n', 10000)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Training seet n\",  len(train_set[0]))\n",
+    "print(\"Validation set n\",  len(valid_set[0]))\n",
+    "print(\"Testing set n\",  len(test_set[0]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Shared dataset\n",
+    "Helps with utilizing the GPU"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def shared_dataset(data_xy):\n",
+    "    data_x, data_y = data_xy\n",
+    "    shared_x = theano.shared(numpy.asarray(data_x, dtype=theano.config.floatX))\n",
+    "    shared_y = theano.shared(numpy.asarray(data_y, dtype=theano.config.floatX))\n",
+    "    return shared_x, T.cast(shared_y, 'int32')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "test_set_x, test_set_y = shared_dataset(test_set)\n",
+    "valid_set_x, valid_set_y = shared_dataset(valid_set)\n",
+    "train_set_x, train_set_y = shared_dataset(train_set)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Primer on Supervised Optimization for Deep Learning\n",
+    "\n",
+    "### Learning a Classifier\n",
+    "\n",
+    "#### Zero-One Loss"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -68,21 +231,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.4.0"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.6"
   }
  },
  "nbformat": 4,
