--- a/notebooks/Meetup 1/Meetup 1.ipynb
+++ b/notebooks/Meetup 1/Meetup 1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 42,
    "metadata": {
     "collapsed": false
    },
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 44,
    "metadata": {
     "collapsed": true
    },
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 45,
    "metadata": {
     "collapsed": false
    },
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 40,
    "metadata": {
     "collapsed": true
    },
@@ -143,15 +143,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 41,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
     "test_set_x, test_set_y = shared_dataset(test_set)\n",
     "valid_set_x, valid_set_y = shared_dataset(valid_set)\n",
-    "train_set_x, train_set_y = shared_dataset(train_set)"
+    "train_set_x, train_set_y = shared_dataset(train_set)\n",
+    "\n",
+    "batch_size = 500 # size of the minibatch\n",
+    "\n",
+    "# accessing the third minibatch of the training set\n",
+    "data = train_set_x[2 * batch_size: 3 * batch_size]\n",
+    "label = train_set_y[2 * batch_size: 3 * batch_size]"
    ]
   },
   {
@@ -162,35 +168,41 @@
     "\n",
     "### Learning a Classifier\n",
     "\n",
-    "#### Zero-One Loss"
+    "#### Zero-One Loss\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "zero_one_loss = T.sum(T.neq(T.argmax(p_y_given_x), y))"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Negative Log-Likelihood Loss"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3.4.2 Stochastic Gradient Descent\n",
+    "\n",
+    "### 3.4.3 Regularization\n",
+    "\n",
+    "#### L1 and L2 Regularization\n",
+    "\n",
+    "#### Early-Stopping\n",
+    "\n",
+    "### 3.4.4 Testing"
+   ]
   },
   {
    "cell_type": "code",
